--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sq-calculator",
   "version": "1.0.0",
-  "description": "Conjunto de funções que calculam diversas estatisticas da Squid",
+  "description": "Conjunto de calculos usados em diversas estatisticas da Squid",
   "main": "index.js",
   "scripts": {
     "lint": "standard",
@@ -20,12 +20,5 @@
   "homepage": "https://github.com/squidit/sq-calculator#README",
   "dependencies": {
     "app-root-dir": "^1.0.2"
-  },
-  "devDependencies": {
-    "ava": "^0.24.0",
-    "nyc": "^11.4.1",
-    "pre-push": "^0.1.1",
-    "sinon": "^4.1.5",
-    "standard": "^8.6.0"
   }
 }
